--- a/core/dgs-custom.sty
+++ b/core/dgs-custom.sty
@@ -1,19 +1,3 @@
-% package titlesec -- formatting of section headers
-%\titleformat{\subsection}[runin / hang]{format whole}{label}{separation}{before}[after]
-\NewDocumentCommand{\loadRegularStyle}{}{   
-    \pagestyle{main}
-    \titleformat{\section}[hang]{\centering\LARGE}{}{0pt}{}
-    \titleformat{\subsection}[hang]{\bfseries\large}{}{0pt}{\quad}[]
-    \titleformat{\subsubsection}[hang]{\bfseries}{}{0pt}{}[]
-    \titlespacing{\section}{0pt}{8pt}{8pt}
-    \titlespacing{\subsection}{0pt}{8pt}{0pt}
-    \titlespacing{\subsubsection}{0pt}{8pt}{0pt}
-}
-
-\NewDocumentCommand{\loadRulesStyle}{}{
-    \loadRegularStyle
-}
-
 % paragraph settings -- formatting paragraphs and list environments
 \linespread{1.0}
 \setlength{\parindent}{0cm}
@@ -28,6 +12,7 @@
 
 \RenewDocumentCommand{\vec}{m}{\vv{#1}}
 
+% Setup enumitem options for *description*, *enumerate* and *itemize*
 \setlist[description]{
     style           = multiline,
     labelindent     =       8mm,
@@ -43,9 +28,13 @@
     itemsep         =   0mm,
 }
 
+% Setup figure caption format and width
+\captionsetup[figure]{
+    format                  = hang,
+    width                   = 0.9\textwidth,
+}
+
 \renewcommand{\arraystretch}{1.0}
 \renewcommand{\textfloatsep}{3mm}
 \renewcommand{\headrulewidth}{0.4pt}
 \renewcommand{\footrulewidth}{0.4pt}
-
-
