--- a/modules/seminar/templates/problems.tex
+++ b/modules/seminar/templates/problems.tex
@@ -3,6 +3,7 @@
 \RequirePackage{core/dgs}
 \RequirePackage{core/config/dgs-config}
 \RequirePackage{core/dgs-custom}
+\input{modules/seminar/styles/(* seminar.id *)/custom.sty}
 \input{input/(* seminar.id *)/(* volume.id *)/(* semester.id *)/(* round.id *)/seminar.sty}
 
 \newcounter{volume}
