--- a/modules/seminar/seminar.sty
+++ b/modules/seminar/seminar.sty
@@ -2,7 +2,7 @@
 
 \fancypagestyle{main}{
     \fancyhead[LO,RE]{\raisebox{(* seminar.hacks.smallLogoRaise *)}{\includegraphics[keepaspectratio = true, height = 6mm]{modules/seminar/styles/(* seminar.id *)/logo/logo.pdf}}}
-    \fancyhead[LE,RO]{(* seminar.fullName *)}
+    \fancyhead[LE,RO]{(* seminar.full.nominative *)}
     \fancyfoot[LO,RE]{\href{mailto:(* seminar.email *)}{\texttt{(* seminar.email *)}}}
     \fancyfoot[C]{\small \thepage}
     \fancyfoot[LE,RO]{\URL{(* seminar.URL *)}}
@@ -40,18 +40,16 @@
             \vspace{16pt}
         \end{minipage}
     }
-    
     \fancyhead[C]{
         \begin{minipage}{0.7\textwidth}
             \centering
             \vspace{4pt}
-            {\Large (* seminar.fullName *)}\\[4pt]
+            {\Large (* seminar.full.nominative *)}\\[4pt]
             {\large (* volume.number|roman *). ročník, (* volume.number + seminar.founded - 1 *)/(* volume.number + seminar.founded *)}\\[8pt]            
-            {\footnotesize (* seminar.shortName *), (* seminar.departmentShort *), (* seminar.fullAddress *)}\\[2pt]
+            {\footnotesize (* seminar.short *), (* seminar.departmentShort *), (* seminar.fullAddress *)}\\[2pt]
             \vspace{6pt}
         \end{minipage}        
     }           
-
     \fancyhead[R]{
         \begin{minipage}{0.2\textwidth}
             \flushright
