--- a/modules/seminar/templates/booklet.tex
+++ b/modules/seminar/templates/booklet.tex
@@ -1,10 +1,10 @@
 \documentclass[12pt, twoside]{article}
 
-\usepackage{core/dgs}
-\usepackage{core/config/dgs-config}
+\input{core/core.xelatex}
+\input{core/config/common.xelatex}
 
 \loadDocumentSettings
-\usepackage{core/dgs-custom}
+\usepackage{core/format.xelatex}
 
 \RenewDocumentCommand{\currentDir}{}{input}
  
