Removed experimental textbook

--- a/core/core.tex
+++ b/core/core.tex
@@ -78,7 +78,7 @@
     urlcolor                = colour-url,                   % custom Trojsten URL link colour
 ]{hyperref}
 
-\RequirePackage[e]{esvect}                                  % nicer vector overset
+\RequirePackage[f]{esvect}                                  % nicer vector overset
 \RequirePackage[all]{nowidow}
 
 % Setup XeLaTeX-specific options
